--- a/src/styles/masonry.css
+++ b/src/styles/masonry.css
@@ -1,21 +1,4 @@
 /* imageList.tsx */
-.masonry-grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: -20px;
-  width: auto;
-}
-.masonry-grid-column {
-  padding-left: 20px;
-  background-clip: padding-box;
-}
-
-.masonry-grid-column > div {
-  background: rgba(0,0,0,.11);
-  margin-bottom: 20px;
-}
-
 @media (min-width: 768px){
   .container-fluid {
     width: 100%;
@@ -34,4 +17,29 @@
   .container-fluid {
     width: 1920px;
   }
+}
+
+/* DetailModal.tsx */
+@media (min-width: 768px) and (max-width: 1399px) {
+  .modal-content {
+    margin-right: 70px;
+    margin-left: 70px;
+  }
+}
+
+@media (min-width: 768px){
+  .modal-content {
+    margin-bottom: 100px;
+  }
+}
+
+.modal-content {
+  margin-top: 32px;
+  inset: 0 !important;
+  border: none;
+  background: none
+}
+
+.modal-open {
+  overflow: hidden
 }
