--- a/src/styles/masonry.css
+++ b/src/styles/masonry.css
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 /* imageList.tsx */
 @media (min-width: 768px){
   .container-fluid {
@@ -19,7 +24,7 @@
   }
 }
 
-/* DetailModal.tsx */
+/* ImageDetailModal.tsx */
 @media (min-width: 768px) and (max-width: 1399px) {
   .modal-content {
     margin-right: 70px;
